# cmake-start

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
libs/common/: CMakeLists.txt
libs/common/include/: common.hpp
libs/common/src/: common.cpp
libs/common/tests/: test_common.cpp
src/: main.cpp
